added material-ui components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,17 @@
-.App {
-  text-align: center;
+.main {
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    text-align: "center";
+    font-family: "Roboto";
+    background-color: "#3949AB";
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.container {
+    width: 40%;
+    height: 80%;
+    margin: 40px auto;
+    background-color: white;
+    text-align: left;
 }
