--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.main {
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    text-align: center;
+    font-family: 'Roboto';
+    background-color: #3949AB;
+}
