--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,13 +2,15 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100vh;
+  width: 100vw;
 }
 
 .main {
     position: absolute;
     top: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     text-align: center;
     font-family: 'Roboto';
     background-color: #3949AB;
